Signed-off-by: stevenCJC <chenjiecheng@qipeipu.com>

--- a/demo/demo.html
+++ b/demo/demo.html
@@ -3,8 +3,6 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>无标题文档</title>
-<script type="text/javascript" src="jquery.js"></script>
-<script type="text/javascript" src="form2object.js"></script>
 </head>
 
 <body>
@@ -44,16 +42,16 @@ sdsdfsdfsdf
 </textarea>
 </body>
 </html>
-<script>
 
-
-$(function(){
-	
-	console.log($('body').form2object());
-	
-});
+<script type="text/javascript" src="config.js"></script>
+<script type="text/javascript" data-main="../demo/demo" src="libs/require.js"></script>
 
 
 
 
-</script>
+
+
+
+
+
+
