--- a/demo/demo-dist.html
+++ b/demo/demo-dist.html
@@ -27,8 +27,8 @@
 </select>
 
 
-<input type="hidden" of-type="[]" of-define="aa"/> 
-<input class="span2" type="text" value="333" of-name="aa[2]"/> 
+<input type="hidden" of-type="[]" of-define="aa"/>
+<input class="span2" type="text" value="333" of-name="aa[2]"/>
 
 
 
@@ -47,9 +47,13 @@ sdsdfsdfsdf
 </body>
 </html>
 
-<script type="text/javascript" src="config.js"></script>
-<script type="text/javascript" data-main="../demo/demo" src="libs/require.js"></script>
-
+<script type="text/javascript" src="libs/jquery.js"></script>
+<script type="text/javascript" src="../dist/jquery.objectForm.js"></script>
+<script type="text/javascript">
+	
+	console.log($('body').objectForm());
+	
+</script>
 
 
 
